demo-oauth/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-oauth
  namespace: keycloak
spec:
  selector:
    app: demo-oauth
  ports:
    - protocol: TCP
      port: 8090
