demo-oauth/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-demo-oauth
  namespace: keycloak
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`demo-oauth.dhub.test.cloud.kadaster.nl`)
      kind: Rule
      services:
        - name: demo-oauth
          port: 8090
